fix overflow issue

--- a/frontend/code-unity/src/Style/AvatarPicker.css
+++ b/frontend/code-unity/src/Style/AvatarPicker.css
@@ -1,12 +1,13 @@
 .avatar-modal-dialog {
   height: 70%; /* = 90% of the .avatar-modal-backdrop block = %90 of the screen */
+    overflow-y: initial !important
 }
 .avatar-modal-content {
   height: 100%; /* = 100% of the .avatar-modal-dialog block */
 }
 .avatar-modal-body {
   height: 100%; /* = 100% of the .avatar-modal-dialog block */
-
+  overflow:hidden;
 }
 .avatar-scollbar {
     height: 90%;
@@ -15,6 +16,8 @@
 .avatar-scollbar-left {
     height: 100%;
   overflow-y: scroll;     /*give auto it will take based in content */
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
 }
 .avatar-image-left{
   margin-left: auto;
@@ -30,4 +33,7 @@
     padding:2%;
     margin:0;
     outline:1px black;
+}
+.modal-body{
+  word-break: break-all;
 }
